<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_gps_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liamd@indrorobotics.com">ros2</maintainer>
  <license>TODO: License declaration</license>
  
  <build_depend>ament_cmake</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>